--- a/css.css
+++ b/css.css
@@ -25,7 +25,7 @@ article{
 text-align: center;
 border: 1px solid black;
 border-radius: 20px;
-width: 500px;
+width: 60vh;
 margin: auto;
 background-color: white; 
 padding: 10px;
